# rules_k8s_cd

./: .bazelrc  .gitignore  .renovaterc.json5  BUILD  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-ci-example  bazel-out  bazel-testlogs  import_repo.sh  update_kubectl.mjs
.githooks/: pre-commit
.github/workflows/: ci.yml  release-please.yml  update-kubectl.yml  update-release-note.sh
ci/go/kustomizer/: BUILD  main.go
ci/go/templater/: BUILD  main.go
deployments/: BUILD
deployments/website/: BUILD
deployments/website/manifests/: manifest.yaml
deployments/website/overlays/: lb.yml
deployments/website/overlays/beta/: lb.yml  replica.yaml
deployments/website/overlays/preview/: test.json  test.yaml.bak
deployments/website/patches/beta/: json.yaml
docs/: BUILD  dive.md  grype.md  helm.md  kyverno.md  trivy.md  utils.md
example/: .bazelrc  MODULE.bazel  WORKSPACE
example/deployments/helm_demo/: BUILD
example/deployments/helm_demo/chart/: Chart.yaml  values.yaml
example/deployments/helm_demo/chart/templates/: deployment.yaml  networkpolicy.yaml  service.yaml
example/deployments/helm_demo/patches/: json6902.yaml  strategic.yaml
example/deployments/website/: BUILD
example/deployments/website/manifests/: manifest.yaml  pod-example.yaml
example/deployments/website/patches/beta/: json.yaml
example/starlark/: gitops.bzl
example/website/: BUILD  index.html
go/: go.mod  go.sum
go/helm_postrender/: BUILD  doc.go  doc_test.go  filter.go  filter_test.go  main.go  patch.go  patch_test.go
go/kustomizer/: BUILD  main.go  main_test.go
go/kyverno_import/: BUILD  main.go  main_test.go
go/tar_filter/: BUILD  README.md  main.go  main_test.go
lib/: BUILD  dive.bzl  extensions.bzl  gitops.bzl  grype.bzl  helm.bzl  kubectl.bzl  kustomization.yaml.tpl  kustomizer.bzl  kyverno.bzl  oci.bzl  oci_push_info.sh.tpl  repo_utils.bzl  repositories.bzl  run_all.sh.tpl  stamp.sh  trivy.bzl  utils.bzl
lib/kyverno/policies/: BUILD
lib/kyverno/policies/baseline/: disallow-host-namespaces.yaml  disallow-host-ports.yaml  disallow-privileged-containers.yaml
lib/kyverno/policies/best-practices/: disallow-latest-tag.yaml  require-labels.yaml  require-requests-limits.yaml
lib/kyverno/policies/restricted/: disallow-privilege-escalation.yaml  require-run-as-non-root.yaml
lib/private/: BUILD  buildifier_toolchain.bzl  dive_toolchain.bzl  grype_toolchain.bzl  helm_toolchain.bzl  kubectl_toolchain.bzl  kyverno_toolchain.bzl  scanner_factory.bzl  toolchain_factory.bzl  trivy_toolchain.bzl
starlark/: BUILD  README.md  dive.bzl  gitops.bzl  grype.bzl  kubectl.bzl  kustomization.yaml.tpl  kustomize.bzl  oci.bzl  oci_push_info.sh.tpl  run_all.sh.tpl  utils.bzl
website/: BUILD
