module(name="rules_k8s_cd", repo_name="rules_k8s_cd", version="1.5.19")
# Add dep based on https://github.com/bazelbuild/rules_go/issues/3442
bazel_dep(name="platforms", version="0.0.10")

bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "rules_oci", version = "1.8.0")
bazel_dep(name = "aspect_bazel_lib",  version = "2.10.0")

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.40.0")

# Register all toolchains
bazel_lib_toolchains = use_extension("@rules_k8s_cd//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.grype()
bazel_lib_toolchains.dive()
bazel_lib_toolchains.kubectl()
use_repo(bazel_lib_toolchains, "grype_toolchains", "dive_toolchains", "kubectl_toolchains")

register_toolchains(
    "@grype_toolchains//:all",
    "@dive_toolchains//:all",
    "@kubectl_toolchains//:all",
)