module(
    name = "rules_k8s_cd",
    version = "3.0.0",
    repo_name = "rules_k8s_cd",
)

# Add dep based on https://github.com/bazelbuild/rules_go/issues/3442
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "package_metadata", version = "0.0.6")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")
bazel_dep(name = "stardoc", version = "0.7.2")

# Register all toolchains
bazel_lib_toolchains = use_extension("@rules_k8s_cd//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.grype()
bazel_lib_toolchains.dive()
bazel_lib_toolchains.kubectl()
bazel_lib_toolchains.kyverno()
bazel_lib_toolchains.trivy()
bazel_lib_toolchains.buildifier()
use_repo(bazel_lib_toolchains, "buildifier", "buildifier_toolchains", "dive_toolchains", "grype_toolchains", "kubectl_toolchains", "kyverno_toolchains", "trivy_toolchains")

register_toolchains(
    "@grype_toolchains//:all",
    "@dive_toolchains//:all",
    "@kubectl_toolchains//:all",
    "@kyverno_toolchains//:all",
    "@trivy_toolchains//:all",
    "@buildifier_toolchains//:all",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "nginx",
    digest = "sha256:dec7a90bd0973b076832dc56933fe876bc014929e14b4ec49923951405370112",
    image = "docker.io/library/nginx",
    platforms = ["linux/amd64"],
)
use_repo(oci, "oci_crane_toolchains")

# Make jq_toolchains visible so oci_push_info can reference exec-platform-resolved jq
bazel_lib = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib.jq()
use_repo(bazel_lib, "jq_toolchains")

# Adobe rules_gitops
# http_archive(
#     name = "com_adobe_rules_gitops",
#     sha256 = "83124a8056b1e0f555c97adeef77ec6dff387eb3f5bc58f212b376ba06d070dd",
#     strip_prefix = "rules_gitops-0.17.2",
#     urls = ["https://github.com/adobe/rules_gitops/archive/refs/tags/v0.17.2.tar.gz"],
# )

# load("@com_adobe_rules_gitops//gitops:deps.bzl", "rules_gitops_dependencies")

# rules_gitops_dependencies()

# load("@com_adobe_rules_gitops//gitops:repositories.bzl", "rules_gitops_repositories")

# rules_gitops_repositories()

# load("@com_adobe_rules_gitops//skylib:k8s.bzl", "kubeconfig")

# kubeconfig(
#     name = "k8s_test",
#     cluster = "loopkube",
#     use_host_config = True,
# )
