# Add dep based on https://github.com/bazelbuild/rules_go/issues/3442
bazel_dep(name="platforms", version="0.0.10")

bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "rules_oci", version = "1.8.0")
bazel_dep(name = "aspect_bazel_lib",  version = "2.9.4")
bazel_dep(name = "aspect_rules_js", version = "2.1.2")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm-website",
    pnpm_lock = "//website:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm-website")

bazel_dep(name = "rules_k8s_cd", version = "1.5.19")
