# Add dep based on https://github.com/bazelbuild/rules_go/issues/3442
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm-website",
    pnpm_lock = "//website:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm-website")

bazel_dep(name = "rules_k8s_cd", version = "3.0.0")

local_path_override(
    module_name = "rules_k8s_cd",
    path = "..",
)

helm_pull = use_extension("@rules_k8s_cd//lib:helm.bzl", "helm_pull")
helm_pull.chart(
    name    = "podinfo",
    repo    = "https://stefanprodan.github.io/podinfo",
    chart   = "podinfo",
    version = "6.7.1",
    sha256  = "887ba6bdf74e24c1499b044fa395bad97a142e1d3e7ffc28278dcab112c50632",
)
use_repo(helm_pull, "podinfo")
